--- a/javascript/building-blocks/tasks/functions/functions2.html
+++ b/javascript/building-blocks/tasks/functions/functions2.html
@@ -41,6 +41,13 @@ const color = 'blue';
 
 // Add your code here
 
+function drawBlueRect() {
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  ctx.fillStyle = color;
+  ctx.fillRect(x, y, 100, 75);
+};
+
+drawBlueRect();
     </textarea>
 
     <div class="playable-buttons">
