--- a/javascript/building-blocks/functions/function-start.html
+++ b/javascript/building-blocks/functions/function-start.html
@@ -9,14 +9,17 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
-        width: 200px;
+        width: 242px;
         background: #eee;
       }
 
       .msgBox p {
         line-height: 1.5;
         padding: 10px 20px;
+        padding-left: 82px;
         color: #333;
+        background-position: 25px center;
+        background-repeat: no-repeat;
       }
 
       .msgBox button {
@@ -35,7 +38,40 @@
     <button>Display message box</button>
 
     <script>
-      
+      const btn = document.querySelector('button');
+      btn.onclick = function() {
+        displayMessage('Your inbox is almost full -- delete some mails');
+      };
+
+      function displayMessage(msgText, msgType) {
+        const html = document.querySelector('html');
+
+        const panel = document.createElement('div');
+        panel.setAttribute('class', 'msgBox');
+        html.appendChild(panel);
+
+        const msg = document.createElement('p');
+        msg.textContent = msgText;
+        panel.appendChild(msg);
+
+        const closeBtn = document.createElement('button');
+        closeBtn.textContent = 'x';
+        panel.appendChild(closeBtn);
+
+        closeBtn.onclick = function() {
+          panel.parentNode.removeChild(panel);
+        }
+
+        if (msgType === 'warning') {
+          msg.style.backgroundImage = 'url(icons/warning.png)';
+          panel.style.backgroundColor = 'red';
+        } else if (msgType === 'chat') {
+          msg.style.backgroundImage = 'url(icons/chat.png)';
+          panel.style.backgroundColor = 'aqua';
+        } else {
+          msg.style.paddingLeft = '20px';
+        }
+      };
     </script>
   </body>
 </html>
