--- a/javascript/building-blocks/tasks/loops/loops1-download.html
+++ b/javascript/building-blocks/tasks/loops/loops1-download.html
@@ -30,7 +30,12 @@
     let list = document.createElement('ul');
 
     // Add your code here
+    myArray.forEach(item => {
+      let li = document.createElement('li');
+      list.appendChild(li);
 
+      li.innerHTML += item;
+    });
     // Don't edit the code below here!
 
     const section = document.querySelector('section');
